added JVM_Heap_size on pihole/jvm

--- a/ContainerHost/ARM/cloud-init.yml
+++ b/ContainerHost/ARM/cloud-init.yml
@@ -5,6 +5,7 @@ packages:
     - docker.io
     - docker-compose
     - azure-cli
+    - git
     #- powershell not supported on 20.04 (2020-07-20)
 
 # create the docker group
