--- a/ContainerHost/pihole/docker-compose.yml
+++ b/ContainerHost/pihole/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       TZ: 'Europe/Stockholm'
       WEBPASSWORD: '${password}'
+      JVM_INIT_HEAP_SIZE: 256M
+      JVM_MAX_HEAP_SIZE: 256M
     # Volumes store your data between container upgrades
     volumes:
        - './etc-pihole/:/etc/pihole/'
